Added Admin and Customer Areas

--- a/EcommerceWeb/EcommerceWeb.csproj
+++ b/EcommerceWeb/EcommerceWeb.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Ecommerce.Models\Ecommerce.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
