Implemented Identity to Ecommerce

--- a/EcommerceWeb/EcommerceWeb.csproj
+++ b/EcommerceWeb/EcommerceWeb.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.DataAccess\Ecommerce.DataAccess.csproj" />
     <ProjectReference Include="..\Ecommerce.Models\Ecommerce.Models.csproj" />
+    <ProjectReference Include="..\Ecommerce.Utility\Ecommerce.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
