--- a/EcommerceWeb/appsettings.json
+++ b/EcommerceWeb/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-MFCMFSQ;Database=EcommerceDb;Trusted_Connection=true;TrustServerCertificate=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EcommerceWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-MFCMFSQ;Database=EcommerceDb;Trusted_Connection=true;TrustServerCertificate=true"
   }
 }
