--- a/Ecommerce.DataAccess/Ecommerce.DataAccess.csproj
+++ b/Ecommerce.DataAccess/Ecommerce.DataAccess.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Models\Ecommerce.Models.csproj" />
+    <ProjectReference Include="..\Ecommerce.Utility\Ecommerce.Utility.csproj" />
   </ItemGroup>
 
 </Project>
