--- a/EcommerceWeb/appsettings.Production.json
+++ b/EcommerceWeb/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:mangastore.database.windows.net,1433;Initial Catalog=EcommerceDb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "DefaultConnection": "Server=tcp:mangastore.database.windows.net,1433;Initial Catalog=EcommerceDb;Persist Security Info=False;User ID=sqladmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "Stripe": {
